--- a/artefacts/documenting/INSTALL
+++ b/artefacts/documenting/INSTALL
@@ -1,5 +1,9 @@
 To reproduce our results, no installation is needed since we provide a virtual machine image.
 
+First download the VM, the location of the VM can be found in VM_LOCATION file in this repository.
+Then, simply double-click on RAICC.ova, it will trigger virtualbox into importing.
+After the importation is done, simply run the VM and floow the instructions of README file.
+
 Please follow the step described in Oracle website to import the virtual machine:
   - https://docs.oracle.com/cd/E26217_01/E26796/html/qs-import-vm.html
 
